# aoc-2024

./: Cargo.toml
days/day1/: day1-1.rs  day1-2.rs
days/day2/: day2-1.rs  day2-2.rs
days/day3/: day3-1.rs  day3-2.rs
days/day4/: day4-1.rs  day4-2.rs
src/: main.rs
