bin = [
  { name = "day1-1", path = "days/day1/day1-1.rs" },
  { name = "day1-2", path = "days/day1/day1-2.rs" },
  { name = "day2-1", path = "days/day2/day2-1.rs" },
  { name = "day2-2", path = "days/day2/day2-2.rs" },
]

[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
